cluster/apps/mediaserver/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/version: 4.0.20.3014-ls325
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/version: 4.0.20.3014-ls325
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: linuxserver/sonarr:4.0.20.3014-ls325@sha256:a5c1a5fecbef946927ab90ad68df319ac5fe644057e5fc18cd993f01ac07b2b2
        name: sonarr
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: media
        resources:
          requests:
            cpu: 50m
            memory: 192Mi
          limits:
            cpu: "1"
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /ping
            port: 8989
          periodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-pvc
