cluster/apps/mediaserver/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/version: 4.0.20.3014-ls325
  name: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
  ports:
  - name: http-sonarr
    port: 8989
    targetPort: 8989
